Cambiada bibliografía y añadidas imágenes (#61, #68)

--- a/memoria/references.bib
+++ b/memoria/references.bib
@@ -1,4 +1,43 @@
-@book{alma991013963162704990,
+@book{rubiano,
+author = {Rubiano, Gustavo N.},
+year = {2013},
+month = {09},
+pages = {},
+title = {Iteración y fractales : con Mathematica},
+publisher = {Universidad Nacional de Colombia}
+}
+
+
+@article{Dreher,
+author = {F. Dreher and T. Samuel},
+title = {Continuous Images of Cantor's Ternary Set},
+journal = {The American Mathematical Monthly},
+volume = {121},
+number = {7},
+pages = {640-643},
+year  = {2014},
+publisher = {Taylor & Francis},
+doi = {10.4169/amer.math.monthly.121.07.640},
+URL = {https://www.tandfonline.com/doi/abs/10.4169/amer.math.monthly.121.07.640},
+eprint = {https://www.tandfonline.com/doi/pdf/10.4169/amer.math.monthly.121.07.640}
+}
+
+@article{Benyamini,
+author = {Yoav Benyamini},
+title = {Applications of the Universal Surjectivity of the Cantor Set},
+journal = {The American Mathematical Monthly},
+volume = {105},
+number = {9},
+pages = {832-839},
+year  = {1998},
+publisher = {Taylor & Francis},
+doi = {10.1080/00029890.1998.12004971},
+URL = {https://doi.org/10.1080/00029890.1998.12004971},
+eprint = {https://doi.org/10.1080/00029890.1998.12004971}
+
+}
+
+@book{Gerald,
 author = {Edgar, Gerald.},
 address = {New York, NY},
 edition = {2nd ed. 2008.},
@@ -11,8 +50,8 @@ title = {Measure, Topology, and Fractal Geometry},
 year = {2008}
 }
 
-@book{alma991007242979704990,
-author = {Mandelbrot, Benoit B.},
+@book{Mandelbrot,
+author = {Mandelbrot, Benoit.},
 address = {New York},
 booktitle = {The Fractal geometry of nature},
 isbn = {0716711869},
@@ -23,6 +62,21 @@ title = {The Fractal geometry of nature },
 year = {1983},
 }
 
+@book{Falconer,
+  added-at = {2011-05-03T00:00:00.000+0200},
+  author = {Falconer, Kenneth},
+  biburl = {https://www.bibsonomy.org/bibtex/26f61c3dea5b33264d413038befb4aa6f/dblp},
+  interhash = {499d680599382f2a09f197216f7aab9d},
+  intrahash = {6f61c3dea5b33264d413038befb4aa6f},
+  isbn = {978-0-471-92287-2},
+  keywords = {dblp},
+  pages = {I-XXII, 1-288},
+  publisher = {Wiley},
+  timestamp = {2011-05-04T11:32:41.000+0200},
+  title = {Fractal geometry - mathematical foundations and applications.},
+  year = 1990
+}
+
 @article{Hausdorff1919,
 author = {Hausdorff, F.},
 journal = {Mathematische Annalen},
@@ -31,4 +85,474 @@ title = {Dimension und äußeres Maß},
 url = {http://eudml.org/doc/158784},
 volume = {79},
 year = {1919},
+}
+
+@book{Hurewicz-Wallman,
+keywords = {Dimensión, Teoría de la (Topología)},
+language = {eng},
+publisher = {Princeton University Press},
+series = {Princeton mathematical series ; 4},
+title = {Dimension theory},
+year = {1974},
+author = {Witold Hurewicz; Henry Wallman},
+address = {Princeton},
+edition = {9th printing},
+}
+
+@article{Moran, 
+title={Additive functions of intervals and Hausdorff measure}, 
+volume={42}, 
+DOI={10.1017/S0305004100022684}, 
+number={1}, 
+journal={Mathematical Proceedings of the Cambridge Philosophical Society}, 
+publisher={Cambridge University Press}, 
+author={Moran, P. A. P.}, 
+year={1946}, 
+pages={15–23}
+}
+
+@book{Wagon,
+author = {Wagon, Stan},
+title = {Mathematica in Action: Problem Solving Through Visualization and Computation},
+year = {2010},
+isbn = {0387753664},
+publisher = {Springer Publishing Company, Incorporated},
+edition = {3rd},
+pages = {15-23}
+}
+
+@book{Apuntes-AMI-Paya,
+author = {Payá, Rafael},
+title = {Apuntes de Análisis Matemático I},
+year = {2008},
+publisher      = {TODO},
+}
+
+@article{Ostrowski,
+author = {Ortega, James M.},
+title = {Solution of Equations in Euclidean and Banach Spaces (A. M. Ostrowski)},
+year = {1974},
+issue_date = {Oct 1974},
+publisher = {Society for Industrial and Applied Mathematics},
+address = {USA},
+volume = {16},
+number = {4},
+issn = {0036-1445},
+url = {https://doi.org/10.1137/1016102},
+doi = {10.1137/1016102},
+journal = {SIAM Rev.},
+month = {10},
+pages = {564},
+numpages = {1}
+}
+
+@book{Atkinson,
+author = {Atkinson, Kendall and Han, Weimin},
+year = {2009},
+month = {01},
+pages = {},
+title = {Theoretical Numerical Analysis: A Functional Analysis Framework},
+edition = {3rd},
+volume = {39},
+isbn = {978-1-4419-0457-7},
+doi = {10.1007/978-1-4419-0458-4},
+publisher      = {Springer New York, NY}
+}
+
+@article{Dubeau-Gnang,
+author = {Dubeau, François and Gnang, Calvin},
+year = {2018},
+month = {01},
+pages = {1-11},
+title = {Fixed Point and Newton's Methods in the Complex Plane},
+volume = {2018},
+journal = {Journal of Complex Analysis},
+doi = {10.1155/2018/7289092}
+}
+
+@book{John-Milnor,
+author = {John Milnor},
+doi = {doi:10.1515/9781400835539},
+url = {https://doi.org/10.1515/9781400835539},
+title = {Dynamics in One Complex Variable.},
+edition        = {3rd},
+year = {2011},
+publisher = {Princeton University Press},
+ISBN = {9781400835539},
+lastchecked = {2022-06-04}
+}
+
+@book{Barnsley,
+title = {Fractals Everywhere},
+publisher = {Academic Press},
+edition = {2nd},
+pages = {42-CP8},
+year = {1993},
+isbn = {978-0-12-079061-6},
+doi = {https://doi.org/10.1016/B978-0-12-079061-6.50008-5},
+url = {https://www.sciencedirect.com/science/article/pii/B9780120790616500085},
+author = {Michael F. Barnsley}
+}
+
+@misc{agness-scott,
+	language = {spanish},
+	title = {Pythagorean Tree},
+	url = {https://larryriddle.agnesscott.org/ifs/pythagorean/pythTree.htm},
+}
+
+@article{Sandra-Snyder,
+author = {Snyder, Sandra},
+year = {2006},
+month = {07},
+pages = {49},
+title = {Fractals and the Collage Theorem},
+journal = {MAT Expository Papers}
+}
+
+@misc{Evan-Dummit,
+  author       = {Dummit, E.},
+  publisher = {Rochester MTH 215},
+  title        = {Dynamics, Chaos, and Fractals (part 4): Fractals},
+  year         = {2015},
+  url          = {https://web.northeastern.edu/dummit/docs/dynamics_4_fractals.pdf}
+}
+
+@article{Bandt,
+ ISSN = {00029939, 10886826},
+ URL = {http://www.jstor.org/stable/4097989},
+ abstract = {For self-similar sets, the existence of a feasible open set is a natural separation condition which expresses geometric as well as measure-theoretic properties. We give a constructive approach by defining a central open set and characterizing those points which do not belong to feasible open sets.},
+ author = {Christoph Bandt and Nguyen {Viet Hung} and Hui Rao},
+ journal = {Proceedings of the American Mathematical Society},
+ number = {5},
+ pages = {1369--1374},
+ publisher = {American Mathematical Society},
+ title = {On the Open Set Condition for Self-Similar Fractals},
+ urldate = {2022-06-04},
+ volume = {134},
+ year = {2006}
+}
+
+@article{Foroutan,
+title = {Advances in the implementation of the box-counting method of fractal dimension estimation},
+journal = {Applied Mathematics and Computation},
+volume = {105},
+number = {2},
+pages = {195-210},
+year = {1999},
+issn = {0096-3003},
+doi = {https://doi.org/10.1016/S0096-3003(98)10096-6},
+url = {https://www.sciencedirect.com/science/article/pii/S0096300398100966},
+author = {K Foroutan-pour and P Dutilleul and D.L Smith},
+keywords = {Box counting, Fractal dimension estimation, Fractal images, Fractals, Image processing, Image skeletons, Smallest and largest box sizes},
+abstract = {The box-counting analysis is an appropriate method of fractal dimension estimation for images with or without self-similarity. However, this technique, including processing of the image and definition of the range of box sizes, requires a proper implementation to be effective in practice. The objectives of this study were thus (1) to determine how to prepare an image for box-counting analysis; (2) to define reasonable preferences for using the Fractal Dimension Calculator software; and (3) to develop a routine procedure for defining the most appropriate range of box sizes for any one-piece image. Four fractal images were chosen for this study: the Koch curve, Koch coastline, Koch boxes, and Cross-tree. Our results show that the skeletons provide better material for the box-counting method since only lines and/or curves are responsible for the fractal dimension value. In the procedure of box counting for fractal dimension estimation, the image must be surrounded by a four-square frame with the least possible area and the condition of linear relationship must be satisfied in a log–log plot. Fractal dimension is to be estimated over the minimum number of boxes covering the image for each box size, after superimposing a reasonable number of grid offsets. In many cases, 25% of the shorter image side may provide an appropriate value for largest box size. However, for noisy or dispersed patterns, a smaller box size than this is needed. In the log–log plot with 12 box sizes, some points corresponding to smaller box sizes deviate from the straight line from a certain point on. The box size corresponding to this breakpoint will provide an appropriate smallest box size. The exercise of determining the most appropriate range of box sizes must be performed repeatedly for every individual image.}
+}
+
+@inproceedings{LaTorre,
+author="Kunze, Herb
+and La Torre, Davide",
+editor="Kilgour, D. Marc
+and Kunze, Herb
+and Makarov, Roman
+and Melnik, Roderick
+and Wang, Xu",
+title="Solving Parameter Identification Problems using the Collage Distance and Entropy",
+booktitle="Recent Developments in Mathematical, Statistical and Computational Sciences",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="167--175",
+abstract="In this paper, we extend the previous method for solving inverse problems for PDEs using the Generalized Collage Theorem by searching for a set of coefficients that not only minimizes the collage error but also maximizes the entropy. In this extended formulation, the parameter estimation minimization problem can be understood as a multi-criteria problem, with two different and conflicting criteria, the generalized collage error and entropy associated with the unknown parameters. We use the typical approach of scalarization to reduce the multi-criteria program to a single-criteria program by combining all objective functions with different trade-off weights. Numerical examples confirm that the collage method produces good, but sub-optimal, results, and that adding a relatively low-weighted entropy term helps us obtain a better approximation.",
+isbn="978-3-030-63591-6"
+}
+
+@article{LaTorre2019,
+  author          = {Kunze, H. and La Torre, D. and Mendivil, F. and Vrscay, E.R.},
+  journal         = {Fractals},
+  title           = {Self-similarity of solutions to integral and differential equations with respect to a fractal measure},
+  volume          = {7},
+  year            = {2019}
+}
+
+%%%%%%%%%%%%%%%%%%%%
+
+@misc{cgdirector,
+	author = {Glawion, A.},
+	date = {2022-04-12},
+	language = {american},
+	title = {CPU vs. GPU Rendering – What’s the difference and which should you choose?},
+	url = {https://www.cgdirector.com/cpu-vs-gpu-rendering/#:%7E:text=GPU%20Based%20Rendering%20And%20GPU%20Focused%20Render%20Engines,-GPU%20rendering%20is&text=For%20one%2C%20GPUs%20are%20much,unlike%20CPUs%20which%20operate%20serially.},
+	urldate = {2022-05-20},
+  keywords = {enlace}
+}
+
+@book{computer-graphics,
+ author = {John F. Hughes and Andries van Dam and Morgan McGuire and David F. Sklar  
+           and James D. Foley and Steven K. Feiner and Kurt Akeley},
+ title = {Computer graphics: principles and practice},
+ year = {2013},
+ month = {7},
+ edition        = {3rd},
+ day = {20},
+ isbn = {0321399528},
+ publisher = {Addison-Wesley Professional},
+ address = {Boston, MA, USA},
+} 
+
+@misc{MDN-1,
+	date = {2022-04-24},
+	language = {american},
+	title = {Adding 2D content to a WebGL context - Web APIs | MDN},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Adding_2D_content_to_a_WebGL_context},
+  urldate = {2022-05-05},
+  keywords = {enlace}
+}
+
+
+@misc{wikipedia-webgl,
+	author = {{colaboradores de Wikipedia}},
+	date = {2022-02-16},
+	language = {spanish},
+	title = {WebGL},
+	url = {https://es.wikipedia.org/wiki/WebGL},
+  urldate = {2022-05-05},
+  keywords = {enlace}
+}
+
+@misc{MDN-2,
+	date = {2022-03-14},
+	language = {american},
+	title = {Data in WebGL - Web APIs | MDN},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Data#attributes},
+  urldate = {2022-05-05}
+}
+
+@misc{MDN-3,
+	date = {2022-04-24},
+	language = {american},
+	title = {Getting started with WebGL - Web APIs | MDN},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Getting_started_with_WebGL},
+  urldate = {2022-05-07}
+}
+
+@misc{learn-opengl,
+	language = {english},
+	title = {LearnOpenGL - OpenGL},
+	url = {https://learnopengl.com/Getting-started/OpenGL},
+  urldate = {2022-05-07}
+}
+
+@misc{khronos,
+	date = {2011-07-19},
+	language = {english},
+	title = {OpenGL ES - The Standard for Embedded Accelerated 3D Graphics},
+	url = {https://www.khronos.org/api/opengles},
+  urldate = {2022-05-05}
+}
+
+@misc{MDN-4,
+	date = {2022-04-27},
+	language = {american},
+	title = {WebGL: 2D and 3D graphics for the web - Web APIs | MDN},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API},
+  urldate = {2022-05-05}
+}
+
+@misc{HTML5rocks,
+	language = {english},
+	title = {WebGL Fundamentals - HTML5 Rocks},
+	url = {https://www.html5rocks.com/en/tutorials/webgl/webgl_fundamentals/},
+  urldate = {2022-05-05}
+}
+
+@misc{MDN-5,
+	date = {2022-04-26},
+	language = {american},
+	title = {WebGL model view projection - Web APIs | MDN},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection#clip_space},
+  urldate = {2022-05-27}
+}
+
+@misc{renderingcontextdoc,
+	date = {2022-01-20},
+	language = {american},
+	title = {WebGLRenderingContext - Web APIs | MDN},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext},
+  urldate = {2022-05-07}
+}
+
+@misc{RT-que-es,
+	author = {López, P.},
+	date = {2020-04-30},
+	language = {spanish},
+	title = {Ray Tracing: ¿Qué es y para qué sirve? - Definición},
+	url = {https://www.geeknetic.es/Ray-Tracing/que-es-y-para-que-sirve},
+  urldate = {2022-05-10}
+}
+
+@misc{Shirley,
+  title = {Ray Tracing in One Weekend},
+  author = {Peter Shirley},
+  year = {2020},
+  month = {12},
+  url = {https://raytracing.github.io/books/RayTracingInOneWeekend.html},
+  urldate = {2022-05-28}
+}
+
+@article{Hart-1995,
+    author = {Hart, J.C.},
+    title = {Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces},
+    journal = {The Visual Computer},
+    year = {1995},
+    volume = {12},
+    pages = {527--545},
+    doi             = {https://doi.org/10.1007/s003710050084},
+}
+
+@article{Hart-1989,
+author = {Hart, J. C. and Sandin, D. J. and Kauffman, L. H.},
+title = {Ray Tracing Deterministic 3-D Fractals},
+year = {1989},
+issue_date = {July 1989},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {23},
+number = {3},
+issn = {0097-8930},
+url = {https://doi.org/10.1145/74334.74363},
+doi = {10.1145/74334.74363},
+abstract = {As shown in 1982, Julia sets of quadratic functions as well as many other deterministic fractals exist in spaces of higher dimensionality than the complex plane. Originally a boundary-tracking algorithm was used to view these structures but required a large amount of storage space to operate. By ray tracing these objects, the storage facilities of a graphics workstation frame buffer are sufficient. A short discussion of a specific set of 3-D deterministic fractals precedes a full description of a ray-tracing algorithm applied to these objects. A comparison with the boundary-tracking method and applications to other 3-D deterministic fractals are also included.},
+journal = {SIGGRAPH Comput. Graph.},
+month = {7},
+pages = {289–296},
+numpages = {8}
+}
+
+@misc{shadows,
+	author = {Quilez, I.},
+	language = {english},
+	title = {Soft shadows in ray-marched SDFs},
+	url = {https://iquilezles.org/articles/rmshadows/},
+	urldate = {2022-05-30},
+}
+
+@misc{3D-SDFs,
+	author = {Quilez, I.},
+	language = {english},
+	title = {3D SDFs},
+	url = {https://iquilezles.org/articles/distfunctions/},
+	urldate = {2022-05-14},
+}
+
+@book{quaternions,
+	author = {Conway, J.H. and Smith, D.A.},
+	year = {2005},
+	language = {english},
+	publisher = {Peters},
+	title = {On Quaternions and Octonions},
+}
+
+@incollection{quaternion-product,
+title = {02 - Geometry and Transformations},
+editor = {Matt Pharr and Wenzel Jakob and Greg Humphreys},
+booktitle = {Physically Based Rendering},
+publisher = {Morgan Kaufmann},
+edition = {3rd},
+address = {Boston},
+pages = {57-121},
+year = {2017},
+isbn = {978-0-12-800645-0},
+doi = {https://doi.org/10.1016/B978-0-12-800645-0.50002-6},
+url = {https://www.sciencedirect.com/science/article/pii/B9780128006450500026},
+author = {Matt Pharr and Wenzel Jakob and Greg Humphreys}
+}
+
+@report{keenan-crane,
+	author = {Crane, K.},
+	date = {2005},
+	publisher = {University of Illinois at Urbana-Champaign},
+	title = {Ray Tracing Quaternion Julia Sets on the GPU},
+}
+
+@book{Hubbard-Douady,
+  author         = {Douady, A. and Hubbard, J.},
+  publisher      = {Cornell University, Ithaca, NY},
+  title          = {Exploring the Mandelbrot set. The Orsay Notes},
+  year           = {2009},
+  url            = {https://pi.math.cornell.edu/~hubbard/OrsayEnglish.pdf},
+}
+
+@misc{normals-sdf,
+	author = {Quilez, I.},
+	language = {english},
+	title = {Normals for an SDF},
+	url = {https://iquilezles.org/articles/normalsSDF/},
+	urldate = {2022-05-15},
+}
+
+@misc{distance-fractals,
+	author = {Quilez, I.},
+	date = {2004},
+	language = {english},
+	title = {Distance to fractals},
+	url = {https://iquilezles.org/articles/distancefractals/},
+	urldate = {2022-05-16},
+}
+
+@misc{mandelbub,
+	author = {Quilez, I.},
+	date = {2009},
+	language = {english},
+	title = {Mandelbub},
+	url = {https://iquilezles.org/articles/mandelbulb/},
+	urldate = {2022-05-16},
+}
+
+@misc{RT-AI,
+	author = {{Two Minute Papers}},
+	date = {2022-04-26},
+	language = {english},
+	title = {NVIDIA's Ray Tracing AI - This is The Next Level!},
+	url = {https://www.youtube.com/watch?v=yl1jkmF7Xug},
+}
+
+@misc{SIGGRAPH-2014,
+	date = {2017-06-01},
+	language = {english},
+	title = {SIGGRAPH 2014 News: ILM Reps Present New Fractal Rendering Technique},
+	url = {https://www.pluralsight.com/blog/film-games/siggraph-2014-news-ilm-reps-present-new-fractal-rendering-technique},
+	urldate = {2022-05-29},
+}
+
+@misc{fractals-films,
+	author = {Doolan, D.C.},
+	date = {2018-12-04},
+	language = {english},
+	title = {Examples of Graphics, Animation and Fractals in Film},
+	url = {https://dcdoolan.wordpress.com/2017/01/23/examples-of-graphics-animation-and-fractals-in-film/},
+	urldate = {2022-05-29},
+}
+
+@misc{romanescu,
+  title = {[Imagen] Romanescu},
+	url = {https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Romanesco_broccoli_%28Brassica_oleracea%29.jpg/800px-Romanesco_broccoli_%28Brassica_oleracea%29.jpg},
+}
+
+@misc{rayo,
+  title = {[Imagen] Rayo},
+  url = {https://services.meteored.com/img/article/decalogo-de-proteccion-contra-el-rayo-273241-1_1024.jpg}
+}
+
+@misc{menger,
+  title = {[Imagen] Esponja de Menger},
+  url = {https://i0.wp.com/matematicascercanas.com/wp-content/uploads/2014/08/esponja_menger.png?resize=300%2C300&ssl=1}
+}
+
+@misc{calima,
+  title = {[Imagen] Paisaje con calima},
+  url = {https://images.ecestaticos.com/UKSHuhoscBOnMSDoxvN6fuIu4kA=/205x24:2193x1515/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F961%2Ff99%2Fc35%2F961f99c35c1c6cb9c6ff2fb551ad238a.jpg}
+}
+
+@misc{curvas-nivel,
+  title = {[Imagen] Curvas de nivel},
+  url = {https://civilgeeks.com/wp-content/uploads/2011/08/curvas-de-nivel2.png}
 }
