--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -28,6 +28,15 @@
 \usepackage{algpseudocode}
 \usepackage{tikz}
 \usepackage{multirow}
+%\usepackage[
+%backend=biber,
+%style=alphabetic,
+%sorting=none
+%]{biblatex}
+%\addbibresource{references.bib} %Imports bibliography file
+%\usepackage{csquotes}
+
+
 %\usepackage[]{algorithm2e}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
