--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -1,100 +1,128 @@
 \begin{thebibliography}{99}
-    
-\bibitem{rubiano} Rubiano, G.N., (2020). \textit{Iteración y Fractales (con Mathematica ®)}. Universidad Nacional de Colombia.
 
-\bibitem{Dreher} F. Dreher; T. Samuel. (2014). Continuous Images of Cantor’s Ternary Set. \textit{The American Mathematical Monthly}, 121(7), 640–643. \url{https://doi.org/10.4169/amer.math.monthly.121.07.640}.
+    \bibitem{Atkinson} Atkinson, K y Han, W. (2009). \textit{Theoretical Numerical Analysis: A Functional Analysis Framework}, 39. Springer New York, 3rd edition. Disponible en \url{https://doi.org/10.1007/978-1-4419-0458-4}.
 
-\bibitem{Benyamini} Benyamini, Y. (1998). Applications of the Universal Surjectivity of the Cantor Set. \textit{American Mathematical Monthly}, 105, 832-839. \url{https://arxiv.org/pdf/1303.3810.pdf}.
+    \bibitem{Bandt} Bandt, C., Viet Hung, N. y Rao, H. (2006). On the Open Set Condition for Self-Similar Fractals. \textit{Proceedings of the American Mathematical Society}, 134(5):1369--1374. Disponible en \url{http://www.jstor.org/stable/4097989}.
 
-\bibitem{alma991013963162704990} Edgar, G.A. (2008). \textit{Measure, Topology, and Fractal Geometry} (2nd ed. 2008.). Springer New York. \url{https://doi.org/10.1007/978-0-387-74749-1}
+    \bibitem{Barnsley} Barnsley, M (1993). \textit{Fractals everywhere}. Academic Press, 2nd edition.
 
-\bibitem{alma991007242979704990} Mandelbrot, B. (1983). \textit{The Fractal geometry of nature}. Freeman.
-\bibitem{alma991007022459704990} Falconer, K. (1990). \textit{Fractal geometry: mathematical foundations and applications}. John Wiley.
-\bibitem{Hausdorff1919} Hausdorff, F. \textit{Dimension und ausseres Mass.} Mathematische Annalen 79 (1919): 157-179. \url{http://eudml.org/doc/158784}.
-\bibitem{Hurewicz-Wallman}Hurewicz, W.; Wallman, H. (1948). \textit{Dimension Theory}. Princeton University Press.
-\bibitem{Moran}Moran, P.A. (1946). \textit{Additive functions of intervals and Hausdorff measure}. In \textit{Mathematical Proceedings of the Cambridge Philosophical Society} (Vol. 42, No. 1, pp. 15-23). Cambridge University Press.
-\bibitem{Wagon}Wagon, S. (2010). \textit{Mathematica in Action}. Springer Publishing. p. 223
-\bibitem{Apuntes-AMI-Paya} Payá, R (2008). \textit{Apuntes de Análisis Matemático I}...
-\bibitem{Ostrowski} Ostrowski, A.M. (1973). \textit{Solution of equations in Euclidean and Banach spaces.} (3rd ed.). Academic Press.
-\bibitem{Atkinson} Atkinson, K; Han, W. (2009). \textit{Theoretical Numerical Analysis: A Functional Analysis Framework} (3rd ed. 2009). Springer New York. \url{https://doi.org/10.1007/978-1-4419-0458-4}
-\bibitem{Dubeau-Gnang} Dubeau, F.; Gnang, C. (2018). Fixed Point and Newton’s Methods in the Complex Plane. \textit{Journal of Complex Analysis, 2018}, 1–11. \url{https://doi.org/10.1155/2018/7289092}
-\bibitem{John-Milnor} Milnor, J. (2006). \textit{Dynamics in one complex variable.} (3rd ed.). Princeton University Press. \url{https://doi.org/10.1515/9781400835539}
-\bibitem{Barnsley} Barnsley, M; Rising, H. (1993). \textit{Fractals everywhere} (2nd ed.). Academic Press.
-\bibitem{agness-scott} \textit{Pythagorean Tree}. (s. f.). Agness Scott College. \url{https://larryriddle.agnesscott.org/ifs/pythagorean/pythTree.htm}
-\bibitem{Sandra-Snyder} Snyder, S.S. (2006). Fractals and the Collage Theorem. \textit{MAT Expository Papers}. 49. \url{https://digitalcommons.unl.edu/mathmidexppap/49}.
-\bibitem{Evan-Dummit} Dummit, E. (2015). \textit{Dynamics, Chaos, and Fractals (part 4): Fractals}. Rochester MTH 215. \url{https://web.northeastern.edu/dummit/docs/dynamics_4_fractals.pdf}.
+    \bibitem{Benyamini} Benyamini, Y. (1998). Applications of the Universal Surjectivity of the Cantor Set. \textit{The American Mathematical Monthly}, 105(9):832--839. Disponible en \url{https://arxiv.org/pdf/1303.3810.pdf}.
 
-\bibitem{Bandt} Bandt, C., Nguyen Viet Hung, Rao, H. (2006). On the Open Set Condition for Self-Similar Fractals. \textit{Proceedings of the American Mathematical Society}, 134(5), 1369–1374. \url{http://www.jstor.org/stable/4097989}
+    \bibitem{quaternions} Conway, J. H. y Smith, D. A. (2005). \textit{On quaternions and octonions}. CRC Press LLC.
+
+    \bibitem{keenan-crane} Crane, K. (2005). Ray Tracing Quaternion Julia Sets on the GPU. \textit{University of Illinois at Urbana-Champaign}. Disponible en \url{https://www.cs.cmu.edu/~kmcrane/Projects/QuaternionJulia/paper.pdf}.
+
+    \bibitem{Hubbard-Douady} Douady, A. y Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}. Cornell University, Ithaca, NY. Disponible en \url{https://pi.math.cornell.edu/~hubbard/OrsayEnglish.pdf}\footnote{Esta última referencia es la traducción a inglés de las notas en francés de un curso dado entre 1983 y 1984, donde se presentan resultados publicados en las referencias [DH1] y [Do1] (1982).}.
+
+    \bibitem{Dreher} Dreher, F. y Samuel, T. (2014). Continuous Images of Cantor’s Ternary Set. \textit{The American Mathematical Monthly}, 121(7):640--643. Disponible en \url{https://doi.org/10.4169/amer.math.monthly.121.07.640}.
+
+    \bibitem{Dubeau-Gnang} Dubeau, F. y Gnang, C. (2018). Fixed Point and Newton’s Methods in the Complex Plane. \textit{Journal of Complex Analysis}, 2018:1--11. Disponible en \url{https://doi.org/10.1155/2018/7289092}.
+
+    \bibitem{Evan-Dummit} Dummit, E. (2015). \textit{Dynamics, Chaos, and Fractals (part 4): Fractals}. Rochester MTH 215. Disponible en \url{https://web.northeastern.edu/dummit/docs/dynamics_4_fractals.pdf}.
+
+    \bibitem{Gerald} Edgar, G.A. (2008). \textit{Measure, Topology, and Fractal Geometry} Undergraduate Texts in Mathematics. Springer New York, 2nd edition. Disponible en \url{https://doi.org/10.1007/978-0-387-74749-1}.
+
+    \bibitem{Falconer} Falconer, K. (1990). \textit{Fractal geometry: mathematical foundations and applications}. John Wiley.
+
+    \bibitem{Foroutan} Foroutan-pour, K., Dutilleul, P. y Smith, D. (1999). Advances in the implementation of the box-counting method of fractal dimension estimation. \textit{Applied Mathematics and Computation}, 105(2):195--210. Disponible en \url{https://doi.org/10.1016/s0096-3003(98)10096-6}.
+
+    \bibitem{Hart-1989} Hart, J., Sandin, D. y Kauffman, L. (1989). Ray tracing deterministic 3-D fractals. \textit{ACM SIGGRAPH Computer Graphics}, 23(3):289--296. Disponible en \url{https://doi.org/10.1145/74334.74363}.
+
+    \bibitem{Hart-1995} Hart, J. (1995). Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces. \textit{The Visual Computer}, 12:527--545. Disponible en \url{https://doi.org/10.1007/s003710050084}.
+
+    \bibitem{Hausdorff1919} Hausdorff, F. (1919). Dimension und ausseres Mass. \textit{Mathematische Annalen}, 79: 157--179.
+
+    \bibitem{computer-graphics} Hughes, J.F., Van Dam, A., McGuire, M., Sklar, D.F., Foley, J.D., Feiner, S.K. y Akeley,K. (2013). \textit{Computer graphics: principles and practice}. Addison-Wesley Proffesional, Boston, MA, 3rd edition.
+
+    \bibitem{Hurewicz-Wallman}Hurewicz, W. y Wallman, H. (1948). \textit{Dimension Theory}. Priceton mathematical series; 4. Princeton University Press.
+
+    \bibitem{LaTorre2019} Kunze, H., La Torre, D., Mendivil, F. y Vrscay, E.R. (2019). Self-similarity of solutions to integral and differential equations with respect to a fractal measure. \textit{Fractals}, 7. Disponible en \url{https://doi.org/10.1142/S0218348X19500142}.
+
+    \bibitem{LaTorre} Kunze, H. y La Torre, D. (2021). Solving Parameter Identification Problems using the Collage Distance and Entropy. \textit{Recent Developments in Mathematical, Statistical and Computational Sciences. AMMCS 2019. Springer Proceedings in Mathematics and Statistics}, 343:167--175, Cham. Springer International Publishing. Disponible en \url{https://doi.org/10.1007/978-3-030-63591-6_16}.
+
+    \bibitem{Mandelbrot} Mandelbrot, B. (1983). \textit{The Fractal geometry of nature}. Freeman, New York.
+
+    \bibitem{John-Milnor} Milnor, J. (2011). \textit{Dynamics in One Complex Variable.} Princeton University Press, 3rd edition. Disponible en \url{https://doi.org/10.1515/9781400835539}.
+
+    \bibitem{Moran}Moran, P.A.P. (1946). Additive functions of intervals and Hausdorff measure. \textit{Mathematical Proceedings of the Cambridge Philosophical Society} 42(1):15--23).
+
+    \bibitem{Ostrowski} Ostrowski, A.M. (1973). \textit{Solution of equations in Euclidean and Banach spaces.} Academic Press, 3rd edition.
+
+    \bibitem{Apuntes-AMI-Paya} Payá, R (2008). \textit{Apuntes de Análisis Matemático I}. Disponibles en \url{https://www.ugr.es/~rpaya/documentos/AnalisisI/2021-22/Apuntes_05.pdf}.
+
+    \bibitem{quaternion-product} Pharr, M., Jakob, W. y Humphreys, G. (2017). 02 - Geometry and transformations. En Pharr, M., Jakob, W. y Humphreys, G., \textit{Physically Based Rendering} 57--121. Morgan Kaufmann, Boston, 3rd edition. Disponible en \url{https://doi.org/10.1016/B978-0-12-800645-0.50002-6}. 
+
+    \bibitem{rubiano} Rubiano, G.N. (2013). \textit{Iteración y Fractales (con Mathematica ®)}. Universidad Nacional de Colombia.
+
+    \bibitem{Sandra-Snyder} Snyder, S. (2006). Fractals and the Collage Theorem. \textit{MAT Expository Papers}, 49. Disponible en \url{https://digitalcommons.unl.edu/mathmidexppap/49}.
+
+    \bibitem{Wagon}Wagon, S. (2010). \textit{Mathematica in Action: Problem Solving Through Visualization and Computation}. Springer Publishing Company, Incorporated, 3rd edition.
+
+\vspace{1cm}
 
 
-\bibitem{Foroutan} Foroutan-pour, K., Dutilleul, P., Smith, D. (1999). Advances in the implementation of the box-counting method of fractal dimension estimation. \textit{Applied Mathematics and Computation, 105}(2–3), 195–210. \url{https://doi.org/10.1016/s0096-3003(98)10096-6}.
+\textbf{{\Large Recursos web}}
 
-\bibitem{LaTorre} Kunze, H., La Torre, D. (2021). Solving Parameter Identification Problems using the Collage Distance and Entropy. \textit{Recent Developments in Mathematical, Statistical and Computational Sciences. AMMCS 2019. Springer Proceedings in Mathematics and Statistics}, vol 343. Springer, Cham. \url{https://doi.org/10.1007/978-3-030-63591-6_16}
+    \bibitem{MDN-1} \textit{Adding 2D content to a WebGL context - Web APIs | MDN}. (2022, 24 abril). MDN Web Docs. Recuperado 5 de mayo de 2022, de \url{https://mzl.la/3x5V5TH}.
 
-\bibitem{LaTorre2019} Kunze, H., La Torre, D., Mendivil, F., Vrscay, E.R. (2019). Self-similarity of solutions to integral and differential equations with respect to a fractal measure. \textit{Fractals}. vol 7. \url{https://doi.org/10.1142/S0218348X19500142}
+    \bibitem{wikipedia-webgl} Colaboradores de Wikipedia. (2022, 16 febrero). \textit{WebGL}. Wikipedia, la enciclopedia libre. Recuperado 5 de mayo de 2022, de \url{https://es.wikipedia.org/wiki/WebGL}.
 
-\bibitem{cgdirector} Glawion, A. (2022, 12 abril). \textit{CPU vs. GPU Rendering – What’s the difference and which should you choose?} CG Director. Recuperado 20 de mayo de 2022, de \url{https://www.cgdirector.com/cpu-vs-gpu-rendering/#:%7E:text=GPU%20Based%20Rendering%20And%20GPU%20Focused%20Render%20Engines,-GPU%20rendering%20is&text=For%20one%2C%20GPUs%20are%20much,unlike%20CPUs%20which%20operate%20serially}.
+    \bibitem{MDN-2} \textit{Data in WebGL - Web APIs} (2022, 14 marzo). MDN Web Docs. Recuperado 6 de mayo de 2022, de \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Data}.
 
-\bibitem{computer-graphics} Hughes, J.F., Van Dam, A., McGuire, M., Sklar, D.F., Foley, J.D., Feiner, S.K., Akeley,K. (2014). \textit{Computer graphics: principles and practice} (3rd ed.). Addison-Wesley.
+    \bibitem{fractals-films} Doolan, D. C. (2018, 4 diciembre). \textit{Examples of Graphics, Animation and Fractals in Film}. Dr. Daniel C. Doolan News and Photos. Recuperado 29 de mayo de 2022, de \url{https://dcdoolan.wordpress.com/2017/01/23/examples-of-graphics-animation-and-fractals-in-film/}.
 
-
-\bibitem{MDN-1} \textit{Adding 2D content to a WebGL context - Web APIs | MDN}. (2022, 24 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Adding_2D_content_to_a_WebGL_context}
-
-\bibitem{wikipedia-webgl} colaboradores de Wikipedia. (2022, 16 febrero). \textit{WebGL}. Wikipedia, la enciclopedia libre. \url{https://es.wikipedia.org/wiki/WebGL}
+    \bibitem{MDN-3} \textit{Getting started with WebGL - Web APIs.} (2022, 24 abril). MDN Web Docs. Recuperado 5 de mayo de 2022, de \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Getting_started_with_WebGL}.
 
 
+    \bibitem{cgdirector} Glawion, A. (2022, 12 abril). \textit{CPU vs. GPU Rendering – What’s the difference and which should you choose?} CG Director. Recuperado 20 de mayo de 2022, de \url{https://bit.ly/3NnTVd9}.
 
-\bibitem{MDN-2} \textit{Data in WebGL - Web APIs | MDN.} (2022, 14 marzo). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Data}
+    \bibitem{learn-opengl} \textit{LearnOpenGL - OpenGL.} (s. f.). OpenGL. Recuperado 5 de mayo de 2022, de \url{https://learnopengl.com/Getting-started/OpenGL}.
 
-\bibitem{MDN-3} \textit{Getting started with WebGL - Web APIs | MDN.} (2022, 24 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Getting_started_with_WebGL}
+    \bibitem{RT-que-es} López, P. (2020, 30 abril). \textit{Ray Tracing: ¿Qué es y para qué sirve? - Definición}. GEEKNETIC. Recuperado 10 de mayo de 2022, de \url{https://www.geeknetic.es/Ray-Tracing/que-es-y-para-que-sirve}.
 
-\bibitem{learn-opengl} \textit{LearnOpenGL - OpenGL.} (s. f.). OpenGL. \url{https://learnopengl.com/Getting-started/OpenGL}
+    \bibitem{khronos} \textit{OpenGL ES - The Standard for Embedded Accelerated 3D Graphics}. (2011, 19 julio). The Khronos Group. Recuperado 7 de mayo de 2022, de \url{https://www.khronos.org/api/opengles}.
 
-\bibitem{khronos} \textit{OpenGL ES - The Standard for Embedded Accelerated 3D Graphics}. (2011, 19 julio). The Khronos Group. \url{https://www.khronos.org/api/opengles}
+    \bibitem{agness-scott} \textit{Pythagorean Tree}. (s. f.). Agness Scott College. Recuperado 2 de mayo de 20222, de \url{https://larryriddle.agnesscott.org/ifs/pythagorean/pythTree.htm}.
 
-\bibitem{MDN-4} \textit{WebGL: 2D and 3D graphics for the web - Web APIs | MDN}. (2022, 27 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API}
 
-\bibitem{HTML5rocks} \textit{WebGL Fundamentals - HTML5 Rocks.} (s. f.). HTML5 Rocks - A Resource for Open Web HTML5 Developers. \url{https://www.html5rocks.com/en/tutorials/webgl/webgl_fundamentals/}
+    \bibitem{shadows} Quilez, I. (2010). \textit{Soft shadows in ray-marched SDFs}. Íñigo Quilez. Recuperado 30 de mayo de 2022, de \url{https://iquilezles.org/articles/rmshadows/}.
 
-\bibitem{MDN-5} \textit{WebGL model view projection - Web APIs | MDN.} (2022, 26 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection#clip_space}
+    \bibitem{3D-SDFs} Quilez, I. (s. f.). \textit{3D SDFs}. Íñigo Quilez. Recuperado 14 de mayo de 2022, de \url{https://iquilezles.org/articles/distfunctions/}
 
-\bibitem{renderingcontextdoc} \textit{WebGLRenderingContext - Web APIs | MDN}. (2022, 20 enero). WebGLRenderingContext. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}
 
-\bibitem{RT-que-es} López, P. (2020, 30 abril). \textit{Ray Tracing: ¿Qué es y para qué sirve? - Definición}. GEEKNETIC. \url{https://www.geeknetic.es/Ray-Tracing/que-es-y-para-que-sirve}
+    \bibitem{normals-sdf} Quilez, I. (s. f.). \textit{Normals for an SDF}. Íñigo Quilez. Recuperado 15 de mayo de 2022, de \url{https://iquilezles.org/articles/normalsSDF/}.
 
-\bibitem{Shirley} Shirley, P. (2020). \textit{Ray Tracing in One Weekend}.\url{https://raytracing.github.io/books/RayTracingInOneWeekend.html}.
+    \bibitem{distance-fractals} Quilez, I. (2004). \textit{Distance to fractals}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/distancefractals/}.
 
-\bibitem{Hart-1995} Hart, J. (1995). Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces. \textit{The Visual Computer}. \url{https://doi.org/10.1007/s003710050084}
+    \bibitem{mandelbub} Quilez, I. (2009). \textit{Mandelbub}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/mandelbulb/}.
 
-\bibitem{Hart-1989} Hart, J., Sandin, D., Kauffman, L. (1989). Ray tracing deterministic 3-D fractals. \textit{ACM SIGGRAPH Computer Graphics}.vol 23. 289-296. \url{https://doi.org/10.1145/74334.74363} 
+    \bibitem{Shirley} Shirley, P. (2020). \textit{Ray Tracing in One Weekend}. Recuperado 28 de mayo de 2022, de \url{https://raytracing.github.io/books/RayTracingInOneWeekend.html}.
 
-\bibitem{shadows} Quilez, I. (s. f.-c). \textit{Soft shadows in ray-marched SDFs}. Íñigo Quilez. Recuperado 30 de mayo de 2022, de \url{https://iquilezles.org/articles/rmshadows/}
+    \bibitem{SIGGRAPH-2014} \textit{SIGGRAPH 2014 News: ILM Reps Present New Fractal Rendering Technique}. (2017, 1 junio). Pluralsight. Recuperado 29 de mayo de 2022, de \url{https://www.pluralsight.com/blog/film-games/siggraph-2014-news-ilm-reps-present-new-fractal-rendering-technique}.
 
-\bibitem{3D-SDFs} Quilez, I. (s. f.). \textit{3D SDFs}. Íñigo Quilez. Recuperado 14 de mayo de 2022, de \url{https://iquilezles.org/articles/distfunctions/}
+    \bibitem{MDN-4} \textit{WebGL: 2D and 3D graphics for the web - Web APIs}. (2022, 27 abril). MDN Web Docs. Recuperado 7 de mayo de 2022, de \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API}.
 
-\bibitem{quaternions} Conway, J. H., Smith, D. A. (2003). \textit{On quaternions and octonions}. 21. CRC Press LLC.
+    \bibitem{HTML5rocks} \textit{WebGL Fundamentals - HTML5 Rocks.} (s. f.). HTML5 Rocks - A Resource for Open Web HTML5 Developers. Recuperado 5 de mayo de 2022, de \url{https://www.html5rocks.com/en/tutorials/webgl/webgl_fundamentals/}.
 
-\bibitem{quaternion-product} Pharr, M., Jakob, W., Humphreys, G. (2017). \textit{Physically Based Rendering} (3rd ed.). 57-121. Morgan Kaufmann. \url{https://doi.org/10.1016/B978-0-12-800645-0.50002-6} 
+    \bibitem{MDN-5} \textit{WebGL model view projection - Web APIs} (2022, 26 abril). MDN Web Docs. Recuperado 27 de mayo de 2022, de \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection#clip_space}.
 
-\bibitem{keenan-crane} Crane, K. (2005). Ray Tracing Quaternion Julia Sets on the GPU. \textit{University of Illinois at Urbana-Champaign}
+    \bibitem{renderingcontextdoc} \textit{WebGLRenderingContext - Web APIs}. (2022, 20 enero). WebGLRenderingContext. Recuperado 7 de mayo de 2022, de \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}.
 
-\bibitem{Hubbard-Douady} Douady, A., Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}. \url{https://pi.math.cornell.edu/~hubbard/OrsayEnglish.pdf}.
+\vspace{1cm}
 
-Esta última referencia es la traducción a inglés de las notas en francés de un curso dado entre 1983 y 1934, donde se presentan resultados publicados en las referencias [DH1] y Do1 (1982).
+\textbf{{\Large Multimedia}}
 
-\bibitem{normals-sdf} Quilez, I. (s. f.-b). \textit{Normals for an SDF}. Íñigo Quilez. Recuperado 15 de mayo de 2022, de \url{https://iquilezles.org/articles/normalsSDF/}
+    \bibitem{curvas-nivel} [Imagen] Curvas de nivel. Civilgeeks. Recuperado el 16 de mayo de 2022, de \url{https://civilgeeks.com/wp-content/uploads/2011/08/curvas-de-nivel2.png}.
 
-\bibitem{distance-fractals} Quilez, I. (2004). \textit{Distance to fractals}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/distancefractals/}
+    \bibitem{menger} [Imagen] Esponja de Menger. Matemáticas cercanas. Recuperado 27 de febrero de 2022, de \url{https://i0.wp.com/matematicascercanas.com/wp-content/uploads/2014/08/esponja_menger.png?resize=300%2C300&ssl=1}.
 
-\bibitem{mandelbub} Quilez, I. (2009). \textit{Mandelbub}. Íñigo Quilez. Recuperado 16 de mayo de 2022, de \url{https://iquilezles.org/articles/mandelbulb/}
+    \bibitem{calima} [Imagen] Paisaje con calima. Escestaticos. Recuperado 11 de mayo de 2022, de \url{https://bit.ly/3ziX220}.
 
-%% video de estado de arte
+    \bibitem{rayo} [Imagen] Rayo. Meteored. Recuperdado 25 de abril de 2022, de \url{https://bit.ly/3NkzAFJ}.
 
-\bibitem{RT-AI} Two Minute Papers. (2022, 26 abril). \textit{NVIDIA’s Ray Tracing AI - This is The Next Level!} [Vídeo]. YouTube. \url{https://www.youtube.com/watch?v=yl1jkmF7Xug}
+    \bibitem{romanescu} [Imagen] Romanescu. Wikipedia, la enciclopedia libre. Recuperado 25 de febrero de 2022, de \url{https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Romanesco_broccoli_%28Brassica_oleracea%29.jpg/800px-Romanesco_broccoli_%28Brassica_oleracea%29.jpg}.
 
-\bibitem{SIGGRAPH-2014} \textit{SIGGRAPH 2014 News: ILM Reps Present New Fractal Rendering Technique}. (2017, 1 junio). Pluralsight. Recuperado 29 de mayo de 2022, de \url{https://www.pluralsight.com/blog/film-games/siggraph-2014-news-ilm-reps-present-new-fractal-rendering-technique}.
-
-\bibitem{fractals-films} Doolan, D. C. (2018, 4 diciembre). \textit{Examples of Graphics, Animation and Fractals in Film}. Dr. Daniel C. Doolan News and Photos. Recuperado 29 de mayo de 2022, de \url{https://dcdoolan.wordpress.com/2017/01/23/examples-of-graphics-animation-and-fractals-in-film/}.
+    \bibitem{RT-AI} [Vídeo] Two Minute Papers. (2022, 26 abril). \textit{NVIDIA’s Ray Tracing AI - This is The Next Level!}. YouTube. Disponible en \url{https://www.youtube.com/watch?v=yl1jkmF7Xug}.
 
 \end{thebibliography}
 
