--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -3,7 +3,7 @@ Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunqu
 
 Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre Fatou}, con el objetivo del \textit{Grand Prix des Sciences mathematiques} que anunció la Academia Francesa de Ciencias publicaron independientemente trabajos sobre iteración de funciones racionales complejas. En 1918 Julia publicó un tratado extenso sobre el tema, al cual se le unió el año siguiente una trilogía de trabajos por parte de Fatou. Por su parte, el conocido matemático alemán \textit{Felix Hausdorff} publica en este mismo año un artículo sobre la dimensión posiblemente no entera de conjuntos \cite{Hausdorff1919}. 
 
-Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbrot}, quien a partir de 1975 con sus trabajos, y en especial su libro \textit{The fractal geometry of nature} \cite{alma991007242979704990} creó lo que hoy conocemos como `Geometría Fractal'. A partir de este momento los científicos con ayuda de los primeros computadores consiguieron visualizar lo que los pioneros ya intuyen.
+Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbrot}, quien a partir de 1975 con sus trabajos, y en especial su libro \textit{The fractal geometry of nature} \cite{Mandelbrot} creó lo que hoy conocemos como `Geometría Fractal'. A partir de este momento los científicos con ayuda de los primeros computadores consiguieron visualizar lo que los pioneros ya intuyen.
 
 Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del ordenador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
 
