--- a/memoria/tex/conclusiones.tex
+++ b/memoria/tex/conclusiones.tex
@@ -4,7 +4,7 @@
 
 Para finalizar la redacción de esta memoria, pondremos en valor algunas conclusiones extraídas durante el desarrollo de este trabajo. En primer lugar, nos gustaría resaltar que, salvo las bases, todo este trabajo ha sido sobre una materia totalmente nueva. No existe ninguna materia en el grado ni de informática ni de matemáticas que explique geometría fractal, a pesar de ser una disciplina no sólo muy hermosa visualmente, sino muy relacionada tanto con una como con otra.
 
-De hecho, llama la atención la cantidad de distintas áreas de la ciencia y de las matemáticas que confluyen en la geometría fractal, al menos en este TFG. Ya en la introducción vimos la cantidad de distintos ámbitos que se recomendaba conocer: análisis, variable compleja, matemática aplicada, geometría euclídea... O por ejemplo, el artículo \cite{Hubbard-Douady} del cual se extrae el `potencial de Hubbard-Douady', que realmente es un concepto puramente matemático aparentemente poco relacionado con esta disciplina, pero finalmente sirve para extraer una SDF con la que visualizar imágenes fractales en 3D.
+De hecho, llama la atención el número de distintas áreas de la ciencia y de las matemáticas que confluyen en la geometría fractal, al menos en este TFG. Ya en la introducción vimos la cantidad de diferentes ámbitos que se recomendaba conocer: análisis, variable compleja, matemática aplicada, geometría euclídea... O por ejemplo, el artículo \cite{Hubbard-Douady} del cual se extrae el `potencial de Hubbard-Douady', que realmente es un concepto puramente matemático aparentemente poco relacionado con esta disciplina, pero finalmente sirve para calcular una SDF con la que visualizar imágenes fractales en 3D.
 
 Además de no enseñarse en el grado, tampoco es un área de investigación en ningún departamento ni hay realmente profesores en esta universidad expertos en esta materia. Prueba de ello es lo difícil que fue encontrar un profesor dispuesto a tutorizar este tema en la parte de matemáticas. Por suerte, finalmente esta idea que surgió hace unos años ha podido ser realizada.
 
