--- a/memoria/tex/objetivos.tex
+++ b/memoria/tex/objetivos.tex
@@ -8,7 +8,7 @@ Sobre teoría de la medida, en el capítulo \ref{chap:concepto} se comprueba la 
 
 Por su parte, el teorema del punto fijo de Banach (teorema \ref{th:punto-fijo}) está enunciado y demostrado en la sección \ref{subsection:convergencia-punto-fijo} y desde ese momento se convierte en una herramienta fundamental en toda la materia y en especial en el capítulo \ref{chap:SFI}, el cual trata de Sistemas de Funciones Iteradas (SFI), concepto que también era objetivo inicial de este trabajo. Los SFI y su convergencia están muy basados en el teorema del punto fijo de Banach y el teorema del collage (teorema \ref{th:collage}) es de hecho una consecuencia del mismo.
 
-Sin embargo, aunque se hacen continuas referencias a la naturaleza con objetos como un romanescu o un rayo, como en las imágenes \ref{fig:objetos} , o se hayan descrito SFIs para modelar un árbol o un helecho en las tablas \ref{tabla:arbol-pitagoras} y \ref{tabla:helecho-Barnsley}, cuyos resultados se pueden ver en las imágenes \ref{fig:atractores-sfi}; lo cierto es que no hay ningún énfasis en aplicaciones de la geometría fractal en la naturaleza. Podemos encontrar en el capítulo \ref{chap:SFI} algunas aplicaciones de la geometría fractal y del teorema del collage, pero realmente no existen explicaciones minuciosas. Esto se debe a que estos cuatro capítulos desarrollados se han considerado suficientes para completar los créditos y los objetivos fundamentales de un proyecto de estas características. No obstante, si el lector lo desea puede encontrar en \cite{alma991007242979704990} una gran cantidad de relaciones entre la naturaleza y la geometría fractal.
+Sin embargo, aunque se hacen continuas referencias a la naturaleza con objetos como un romanescu o un rayo, como en las imágenes \ref{fig:objetos} , o se hayan descrito SFIs para modelar un árbol o un helecho en las tablas \ref{tabla:arbol-pitagoras} y \ref{tabla:helecho-Barnsley}, cuyos resultados se pueden ver en las imágenes \ref{fig:atractores-sfi}; lo cierto es que no hay ningún énfasis en aplicaciones de la geometría fractal en la naturaleza. Podemos encontrar en el capítulo \ref{chap:SFI} algunas aplicaciones de la geometría fractal y del teorema del collage, pero realmente no existen explicaciones minuciosas. Esto se debe a que estos cuatro capítulos desarrollados se han considerado suficientes para completar los créditos y los objetivos fundamentales de un proyecto de estas características. No obstante, si el lector lo desea puede encontrar en \cite{Mandelbrot} una gran cantidad de relaciones entre la naturaleza y la geometría fractal.
 
 Por parte de informática, es cierto que no ha sido posible completar totalmente los objetivos, ya que al haber codificado todo sin ningún tipo de ayuda de ningún framework, la programación y sobre todo el depurado de errores en GLSL se vuelve muy complicado. Así, los objetivos iniciales consistían en estudiar diversos algoritmos conocidos para visualización de fractales en 2D y 3D, especialmente aquellos basados en Ray-tracing en 3D. Tras esto, se realizaría un análisis de sus características, con énfasis en la eficiencia en tiempo. Estos algoritmos se diseñarían e implementarían usando hardware gráfico moderno, y se evaluarían los resultados obtenidos en cuanto a tiempo de cálculo y funcionalidad ofrecida.
 
